--- a/config.json
+++ b/config.json
@@ -6,9 +6,14 @@
       {
         "description": "Installing vim configuration",
         "commands": [
-          "curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
+          "curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim",
+          "cp ./softwares/vim/.vimrc ~/.vimrc"
         ]
       }
     ]
+  },
+  "full": {
+    "description": "Install full shell configuration",
+    "dependencies": ["basic"]
   }
 }
