--- a/.travis-ci.yml
+++ b/.travis-ci.yml
@@ -1,5 +1,6 @@
 language: python
 
 script:
-  - sudo sh ./install.sh basic
+  - sudo sh ./install.sh minimal
+  - sudo sh ./install.sh shell
   - sudo sh ./install.sh full
