Add zsh configuration

--- a/config.json
+++ b/config.json
@@ -14,7 +14,17 @@
   },
   "shell": {
     "description": "ZSH full shell configuration",
-    "programs": ["zsh"]
+    "dependencies": ["minimal"],
+    "programs": ["zsh"],
+    "steps": [
+      {
+        "description": "Installing zsh custom configuration",
+        "commands": [
+          "sh -c \"$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)\"",
+          "cp ./softwares/zsh/.zshrc ~/"
+        ]
+      }
+    ]
   },
   "full": {
     "description": "Install full shell configuration",
