--- a/config.json
+++ b/config.json
@@ -7,7 +7,7 @@
         "description": "Installing vim configuration",
         "commands": [
           "curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim",
-          "cp -p ./softwares/vim/.vimrc ~/.vimrc"
+          "[CP] ./softwares/vim/.vimrc ~/.vimrc"
         ]
       }
     ]
@@ -21,7 +21,7 @@
         "description": "Installing zsh custom configuration",
         "commands": [
           "exit | sh -c \"$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)\"",
-          "cp -p ./softwares/zsh/.zshrc ~/"
+          "[CP] ./softwares/zsh/.zshrc ~/"
         ]
       }
     ]
