--- a/config.json
+++ b/config.json
@@ -7,7 +7,8 @@
         "description": "Installing vim configuration",
         "commands": [
           "[CP] ./softwares/vim/.vimrc ~/.vimrc",
-          "curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim"
+          "curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim",
+          "[CHOWN] .vim"
         ]
       }
     ]
