--- a/config.json
+++ b/config.json
@@ -8,7 +8,8 @@
         "commands": [
           "[CP] ./softwares/vim/.vimrc ~/.vimrc",
           "curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim",
-          "[CHOWN] ~/.vim"
+          "[CHOWN] ~/.vim",
+          "vim -c ':PlugInstall | :qa'"
         ]
       }
     ]
