--- a/config.json
+++ b/config.json
@@ -9,7 +9,7 @@
           "[CP] ./softwares/vim/.vimrc ~/.vimrc",
           "curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim",
           "[CHOWN] ~/.vim",
-          "vim -c ':PlugInstall | :qa'"
+          "vim +silent +VimEnter +PlugInstall +qall"
         ]
       }
     ]
