--- a/config.json
+++ b/config.json
@@ -8,8 +8,8 @@
         "commands": [
           "[CP] ./softwares/vim/.vimrc ~/.vimrc",
           "curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim",
-          "[CHOWN] ~/.vim",
-          ["vim", "+silent", "+vimEnter", "+PlugInstall", "+qall"]
+          ["vim", "+silent", "+vimEnter", "+PlugInstall"],
+          "[CHOWN] ~/.vim"
         ]
       }
     ]
