--- a/config.json
+++ b/config.json
@@ -8,7 +8,7 @@
         "commands": [
           "[CP] ./softwares/vim/.vimrc ~/.vimrc",
           "curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim",
-          ["vim", "+silent", "+vimEnter", "+PlugInstall"],
+          ["vim", "+silent", "+vimEnter", "+PlugInstall", "+qall"],
           "[CHOWN] ~/.vim"
         ]
       }
