--- a/config.json
+++ b/config.json
@@ -9,7 +9,8 @@
           "[CP] ./softwares/vim/.vimrc ~/.vimrc",
           "curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim",
           ["vim", "+silent", "+vimEnter", "+PlugInstall", "+qall"],
-          "[CHOWN] ~/.vim"
+          "[CHOWN] ~/.vim",
+          "vim --version"
         ]
       }
     ]
