--- a/config.json
+++ b/config.json
@@ -8,9 +8,7 @@
         "commands": [
           "[CP] ./softwares/vim/.vimrc ~/.vimrc",
           "curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim",
-          "vim +silent +PlugInstall +qall && echo done!",
-          "[CHOWN] ~/.vim",
-          "vim --version"
+          "vim +silent +PlugInstall +qall && [CHOWN] ~/.vim &"
         ]
       }
     ]
