--- a/config.json
+++ b/config.json
@@ -37,7 +37,9 @@
         "commands": [
           "curl -fsSL get.docker.com -o get-docker.sh",
           "sh get-docker.sh",
-          "usermod -aG docker [USER]"
+          "usermod -aG docker [USER]",
+          "curl -L https://github.com/docker/compose/releases/download/1.17.0/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose",
+          "chmod +x /usr/local/bin/docker-compose",
         ]
       }
     ]
