--- a/config.yml
+++ b/config.yml
@@ -7,10 +7,10 @@
   steps:
     - description: Installing vim configuration
       commands:
-        - [CP] ./softwares/vim/.vimrc ~/.vimrc
+        - CP ./softwares/vim/.vimrc ~/.vimrc
         - curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
         - ["vim", "+silent", "+PlugInstall", "+qall"]
-        - [CHOWN] ~/.vim
+        - CHOWN ~/.vim
         - grep "^alias" ./softwares/zsh/.zshrc > ~/.zshenv
         - pip3 install pep8 jedi
 - shell:
@@ -23,7 +23,7 @@
       - description: Installing zsh custom configuration
         commands:
           - exit | sh -c "$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
-          - [CP] ./softwares/zsh/.zshrc ~/
+          - CP ./softwares/zsh/.zshrc ~/
           - grep "^alias" ~/.zshrc > ~/.zshenv
 - docker:
   description: Install docker and docker-compose
@@ -36,7 +36,7 @@
       commands:
         - curl -fsSL get.docker.com -o get-docker.sh
         - sh get-docker.sh
-        - usermod -aG docker [USER]
+        - usermod -aG docker USER
         - curl -L https://github.com/docker/compose/releases/download/1.17.0/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
         - chmod +x /usr/local/bin/docker-compose
 
