Add ansible configuration install

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,8 @@ jobs:
   -
     script: curl https://raw.githubusercontent.com/victorboissiere/lifesaver/master/install.sh -fsSL | sudo bash -s docker
   -
+    script: curl https://raw.githubusercontent.com/victorboissiere/lifesaver/master/install.sh -fsSL | sudo bash -s ansible
+  -
     script: curl https://raw.githubusercontent.com/victorboissiere/lifesaver/master/install.sh -fsSL | sudo bash -s full
   - stage: wget
     script: wget -O - https://raw.githubusercontent.com/victorboissiere/lifesaver/master/install.sh | sudo bash -s minimal
