--- a/config.yml
+++ b/config.yml
@@ -40,6 +40,16 @@ docker:
         - curl -L https://github.com/docker/compose/releases/download/1.17.0/docker-compose-`uname -s`-`uname -m` -o /usr/local/bin/docker-compose
         - chmod +x /usr/local/bin/docker-compose
 
+ansible:
+  description: Install ansible with required packages
+  programs:
+    - python-passlib
+  steps:
+    - description: Install passlib
+      commands:
+        - pip3 install -i https://pypi.python.org/simple/ --upgrade pip
+        - pip3 install ansible
+
 full:
   description: Install full shell configuration
   dependencies:
