Fix custom zsh config

--- a/config.yml
+++ b/config.yml
@@ -32,7 +32,8 @@ shell:
         - mkdir -p ~/.config/ranger
         - CP ./softwares/ranger/rc.conf ~/.config/ranger/rc.conf
         - CHOWN ~/.config
-        - CP -r ./softwares/zsh/custom ~/.oh-my-zsh/custom
+        - CP -r ./softwares/zsh/custom ~/.oh-my-zsh/
+        - CHOWN ~/.oh-my-zsh
   after_help: To switch default shell to zsh please run "chsh -s $(which zsh)"
 
 server:
