--- a/config2.yaml
+++ b/config2.yaml
@@ -7,9 +7,9 @@ minimal:
   steps:
     - description: Installing vim configuration
       commands:
-        - CP ./softwares/vim/.vimrc ~/.vimrc
+        # - CP ./softwares/vim/.vimrc ~/.vimrc
         - curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
-        - ["vim", "+silent", "+PlugInstall", "+qall"]
-        -  mkdir -p ~/.vim/swap && mkdir -p ~/.vim/undo
-        - CHOWN ~/.vim
-        - grep "^alias" ./softwares/zsh/.zshrc > ~/.zshenv
+        - vim +silent +PlugInstall +qall
+        # -  mkdir -p ~/.vim/swap && mkdir -p ~/.vim/undo
+        # - CHOWN ~/.vim
+        # - grep "^alias" ./softwares/zsh/.zshrc > ~/.zshenv
