--- a/config2.yaml
+++ b/config2.yaml
@@ -6,10 +6,12 @@ minimal:
     - zsh # For vim alias auto completion
   steps:
     - description: Installing vim configuration
+      configFiles:
+        - src: softwares/vim/.vimrc
+          dest: ~/.vimrc
       commands:
-        # - CP ./softwares/vim/.vimrc ~/.vimrc
         - curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
         - vim +silent +PlugInstall +qall
-        # -  mkdir -p ~/.vim/swap && mkdir -p ~/.vim/undo
+        -  mkdir -p ~/.vim/swap && mkdir -p ~/.vim/undo
         # - CHOWN ~/.vim
         # - grep "^alias" ./softwares/zsh/.zshrc > ~/.zshenv
