--- a/config2.yaml
+++ b/config2.yaml
@@ -1,5 +1,5 @@
 minimal:
-  description: Hello
+  description: Install basic shell configuration
   programs:
     - vim
     - curl
@@ -9,9 +9,10 @@ minimal:
       configFiles:
         - src: softwares/vim/.vimrc
           dst: ~/.vimrc
+        - src: softwares/zsh/.zshrc
+          dst: ~/.zshrc
       commands:
         - curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
         - vim +silent +PlugInstall +qall
         -  mkdir -p ~/.vim/swap && mkdir -p ~/.vim/undo
-        # - CHOWN ~/.vim
-        # - grep "^alias" ./softwares/zsh/.zshrc > ~/.zshenv
+        - grep "^alias" ~/.zshrc > ~/.zshenv
