--- a/config2.yaml
+++ b/config2.yaml
@@ -16,3 +16,24 @@ minimal:
         - vim +silent +PlugInstall +qall
         -  mkdir -p ~/.vim/swap && mkdir -p ~/.vim/undo
         - grep "^alias" ~/.zshrc > ~/.zshenv
+
+shell:
+  description: ZSH full shell configuration with oh my zsh
+  dependencies:
+    - minimal
+  programs:
+    - zsh
+    - ranger
+  steps:
+    - description: Installing zsh custom configuration
+      commands:
+        - exit | sh -c "$(curl -fsSL https://raw.githubusercontent.com/robbyrussell/oh-my-zsh/master/tools/install.sh)"
+    - description: Apply custom ranger configuration
+      configFiles:
+        - src: softwares/ranger/rc.conf
+          dst: ~/.config/ranger/rc.conf
+        - src: softwares/zsh/custom
+          dst: ~/.oh-my-zsh
+      commands:
+        - mkdir -p ~/.config/ranger
+  afterHelp: To switch default shell to zsh please run "chsh -s $(which zsh)"
