Add new travis version

--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,5 @@ jobs:
     script: sudo ./lifesaver minimal && ls -la ~ && test -f ~/.vimrc
   - script: sudo ./lifesaver shell && ls -la ~ && test -f ~/.vimrc
   - stage: Install commands from compiled binaries
-    script: wget -O - https://raw.githubusercontent.com/victorboissiere/lifesaver/go/install.sh | sudo bash -s minimal
-  - script: wget -O - https://raw.githubusercontent.com/victorboissiere/lifesaver/go/install.sh | sudo bash -s shell
-  #  script: wget -O - https://ls.gitcommit.fr | sudo bash -s minimal
+    script: wget -O - ls.gitcommit.fr | sudo bash -s minimal
+  - script: wget -O - ls.gitcommit.fr | sudo bash -s shell
