--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,4 +8,11 @@ jobs:
       - checkout
       - run: go get gopkg.in/yaml.v2
       - run: go build lifesaver.go
-      - run: sudo ./lifesaver minimal && ls -la ~ && test -f ~/.vimrc
+workflows:
+  version: 2
+  build_and_test_full:
+    jobs:
+      - build
+    steps:
+      - sudo ./lifesaver shell
+      - ls -la ~
