--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,11 +8,7 @@ jobs:
       - checkout
       - run: go get gopkg.in/yaml.v2
       - run: go build lifesaver.go
-workflows:
-  version: 2
-  build_and_test_full:
-    jobs:
-      - build
-    steps:
-      - sudo ./lifesaver shell
-      - ls -la ~
+      - run: sudo ./lifesaver full
+      - run: ls -la ~
+      - run: test -f ~/.vimrc
+
