--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -10,7 +10,7 @@ jobs:
       - run: go build lifesaver.go
       - run: sudo ./lifesaver full
       - run: test -f ~/.vimrc
-      - run: test "$(stat -c %U .vimrc)" = "$USER"
-      - run: test "$(stat -c %U .config)" = "$USER"
-      - run: test "$(stat -c %U .zshrc)" = "$USER"
+      - run: test "$(stat -c %U /home/circleci/.vimrc)" = "$USER"
+      - run: test "$(stat -c %U /home/circleci/.config)" = "$USER"
+      - run: test "$(stat -c %U /home/circleci/.zshrc)" = "$USER"
 
