--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,5 +13,15 @@ jobs:
       - run: test "$(stat -c %U /home/circleci/.vimrc)" = "circleci"
       - run: test "$(stat -c %U /home/circleci/.config)" = "circleci"
       - run: test "$(stat -c %U /home/circleci/.zshrc)" = "circleci"
+  server_full_install:
+    docker:
+      - image: circleci/golang:1.10
+    working_directory: /go/src/github.com/victorboissiere/lifesaver
+    steps:
+      - checkout
       - run: wget -O - ls.gitcommit.fr | sudo bash -s full
+      - run: test -f ~/.vimrc
+      - run: test "$(stat -c %U /home/circleci/.vimrc)" = "circleci"
+      - run: test "$(stat -c %U /home/circleci/.config)" = "circleci"
+      - run: test "$(stat -c %U /home/circleci/.zshrc)" = "circleci"
 
