--- a/config.yaml
+++ b/config.yaml
@@ -13,7 +13,7 @@ minimal:
           dst: ~/.zshrc
       commands:
         - curl -fLo ~/.vim/autoload/plug.vim --create-dirs https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim
-        - vim +silent +PlugInstall +qall
+        # - vim +silent +PlugInstall +qall
         - mkdir -p ~/.vim/swap && mkdir -p ~/.vim/undo
         - grep "^alias" ~/.zshrc > ~/.zshenv
 
