--- a/config.yaml
+++ b/config.yaml
@@ -25,7 +25,7 @@ shell:
     - zsh
     - ranger
   steps:
-    - description: Installing zsh custom configuration
+    - description: Installing oh-my-zsh
       configFiles:
         - src: softwares/zsh/oh-my-zsh.sh
           dst: /tmp/oh-my-zsh-installer.sh
@@ -41,11 +41,17 @@ shell:
           dst: ~/.oh-my-zsh/custom/vs.zsh
         - src: softwares/zsh/custom/alias-docker.zsh
           dst: ~/.oh-my-zsh/custom/alias-docker.zsh
-    - description: Apply custom ranger configuration
+  afterHelp: To switch default shell to zsh please run "chsh -s $(which zsh)"
+
+ranger:
+  description: Install ranger
+  programs:
+    - ranger
+  steps:
+    - description: Install ranger config
       configFiles:
         - src: softwares/ranger/rc.conf
           dst: ~/.config/ranger/rc.conf
-  afterHelp: To switch default shell to zsh please run "chsh -s $(which zsh)"
 
 server:
   description: Install server vim and zsh configuration
