Add circleci test build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,6 +13,16 @@ jobs:
       - run: test "$(stat -c %U /home/circleci/.vimrc)" = "circleci"
       - run: test "$(stat -c %U /home/circleci/.oh-my-zsh)" = "circleci"
       - run: test "$(stat -c %U /home/circleci/.zshrc)" = "circleci"
+   test:
+     docker:
+       - image: circleci/golang:1.10
+     working_directory: /go/src/github.com/victorboissiere/lifesaver
+     steps:
+       - run: wget -O - ls.gitcommit.fr | bash -s full
+       - run: test -f ~/.vimrc
+       - run: test "$(stat -c %U /home/circleci/.vimrc)" = "circleci"
+       - run: test "$(stat -c %U /home/circleci/.oh-my-zsh)" = "circleci"
+       - run: test "$(stat -c %U /home/circleci/.zshrc)" = "circleci"
 
 workflows:
   version: 2
