--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -13,7 +13,7 @@ jobs:
       - run: test "$(stat -c %U /home/circleci/.vimrc)" = "circleci"
       - run: test "$(stat -c %U /home/circleci/.oh-my-zsh)" = "circleci"
       - run: test "$(stat -c %U /home/circleci/.zshrc)" = "circleci"
-  build:
+  test:
     docker:
       - image: circleci/golang:1.10
     working_directory: /go/src/github.com/victorboissiere/lifesaver
