--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,7 @@ jobs:
       - checkout
       - run: go get gopkg.in/yaml.v2
       - run: go build lifesaver.go
-      - run: sudo echo pass && ./lifesaver full
+      - run: sudo echo pass && ./lifesaver shell
       - run: test -f ~/.vimrc
       - run: test "$(stat -c %U /home/circleci/.vimrc)" = "circleci"
       - run: test "$(stat -c %U /home/circleci/.oh-my-zsh)" = "circleci"
@@ -18,7 +18,7 @@ jobs:
       - image: circleci/golang:1.10
     working_directory: /go/src/github.com/victorboissiere/lifesaver
     steps:
-      - run: wget -O - ls.gitcommit.fr | bash -s full
+      - run: wget -O - ls.gitcommit.fr | bash -s server
       - run: test -f ~/.vimrc
       - run: test "$(stat -c %U /home/circleci/.vimrc)" = "circleci"
       - run: test "$(stat -c %U /home/circleci/.oh-my-zsh)" = "circleci"
